#3 Include D3v7.6.0 locally for example chart + Remove d3 from gulpfile

--- a/src/examples/legend.html
+++ b/src/examples/legend.html
@@ -45,7 +45,7 @@
 
     <div id="chart"></div>
     <script type="module">
-      import { select } from 'https://cdn.skypack.dev/d3@7';
+      import { select } from './vendor/d3-7.6.0/d3.js';
       import {
         legendData,
         legendRender,
