--- a/src/examples/line-basic.html
+++ b/src/examples/line-basic.html
@@ -21,7 +21,7 @@
     <h1>Basic Line Chart</h1>
     <div id="chart"></div>
     <script type="module">
-      import { select } from 'https://cdn.skypack.dev/d3@7';
+      import { select } from './vendor/d3-7.6.0/d3.js';
       import {
         chartWindowLineData,
         chartWindowLineRender,
