--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -12,18 +12,18 @@
   <body>
     <h1>RespVis Examples</h1>
     <ul>
-      <li><a href="./bar-basic.html">Basic Bar Chart</a></li>
-      <li><a href="./bar.html">Bar Chart</a></li>
-      <li><a href="./grouped-bar-basic.html">Basic Grouped Bar Chart</a></li>
+<!--      <li><a href="./bar-basic.html">Basic Bar Chart</a></li>-->
+<!--      <li><a href="./bar.html">Bar Chart</a></li>-->
+<!--      <li><a href="./grouped-bar-basic.html">Basic Grouped Bar Chart</a></li>-->
+<!--      <li><a href="./stacked-bar-basic.html">Basic Stacked Bar Chart</a></li>-->
+<!--      <li><a href="./line-basic.html">Basic Line Chart</a></li>-->
+<!--      <li><a href="./point-basic.html">Basic Point Chart</a></li>-->
+<!--      <li><a href="./line-multi-basic.html">Basic Multi-Line Chart</a></li>-->
+<!--      <li><a href="./line.html">Line Chart</a></li>-->
+<!--      <li><a href="./point.html">Point Chart</a></li>-->
       <li><a href="./grouped-bar.html">Grouped Bar Chart</a></li>
-      <li><a href="./stacked-bar-basic.html">Basic Stacked Bar Chart</a></li>
       <li><a href="./stacked-bar-percent.html">Percent Stacked Bar Chart</a></li>
       <li><a href="./stacked-bar.html">Stacked Bar Chart</a></li>
-      <li><a href="./line-basic.html">Basic Line Chart</a></li>
-      <li><a href="./line-multi-basic.html">Basic Multi-Line Chart</a></li>
-      <li><a href="./line.html">Line Chart</a></li>
-      <li><a href="./point-basic.html">Basic Point Chart</a></li>
-      <li><a href="./point.html">Point Chart</a></li>
       <li><a href="./article.html">News Article</a></li>
       <li><a href="./legend.html">Legend</a></li>
     </ul>
