Add respvis module with js ending for hosting + include it in examples + fix examples redirect

--- a/src/examples/article.html
+++ b/src/examples/article.html
@@ -89,7 +89,7 @@
         chartWindowBarStackedRender,
         chartWindowBarStackedAutoFilterCategories,
         chartWindowBarStackedAutoFilterSubcategories,
-      } from '../respvis.mjs';
+      } from '../moduleInJs/respvis.js';
       import { years, desktop, phone, tablet, platforms } from './data/desktop-phone-tablet.js';
 
       const shares = desktop.map((d, i) => [desktop[i], phone[i], tablet[i]]);
