--- a/src/examples/bar.html
+++ b/src/examples/bar.html
@@ -34,7 +34,7 @@
       chartWindowBarData,
       chartWindowBarAutoFilterCategories,
       chartWindowBarRender,
-    } from '../respvis.mjs';
+    } from '../moduleInJs/respvis.js';
 
     import data from './data/austrian-cities.js';
 
