--- a/src/examples/grouped-bar-basic.html
+++ b/src/examples/grouped-bar-basic.html
@@ -28,7 +28,7 @@
         chartWindowBarGroupedAutoFilterCategories,
         chartWindowBarGroupedAutoFilterSubcategories,
         chartWindowBarGroupedAutoResize,
-      } from '../respvis.mjs';
+      } from '../moduleInJs/respvis.js';
 
       select('#chart')
         .append('div')
