--- a/src/examples/grouped-bar.html
+++ b/src/examples/grouped-bar.html
@@ -52,7 +52,7 @@
         chartWindowBarGroupedRender,
         chartWindowBarGroupedAutoFilterCategories,
         chartWindowBarGroupedAutoFilterSubcategories,
-      } from '../respvis.mjs';
+      } from '../moduleInJs/respvis.js';
 
       import { sites, revenues, years } from './data/company.js';
 
