--- a/src/examples/legend.html
+++ b/src/examples/legend.html
@@ -57,7 +57,7 @@
         layouterCompute,
         chartWindowRender,
         toolDownloadSVGRender,
-      } from '../respvis.mjs';
+      } from '../moduleInJs/respvis.js';
 
       const labels = [0, 1, 2, 3].map((n) => `Label ${n}`);
 
