--- a/src/examples/line-multi.html
+++ b/src/examples/line-multi.html
@@ -48,7 +48,7 @@
         chartWindowLineData,
         chartWindowLineRender,
         chartWindowLineAutoResize,
-    } from '../respvis.mjs'
+    } from '../moduleInJs/respvis.js'
 
     import data from './data/electric-power-consumption/electricPowerConsumption.js'
 
