--- a/src/examples/point.html
+++ b/src/examples/point.html
@@ -36,7 +36,7 @@
     <div id="chart"></div>
     <script src="./vendor/d3.v7.js"></script>
     <script type="module">
-      import { chartWindowPointData, chartWindowPointRender, rectFromString } from '../respvis.mjs';
+      import { chartWindowPointData, chartWindowPointRender, rectFromString } from '../moduleInJs/respvis.js';
       import { areas, prices } from './data/houses.js';
 
       const areaScale = d3
