--- a/src/examples/stacked-bar-basic.html
+++ b/src/examples/stacked-bar-basic.html
@@ -28,7 +28,7 @@
         chartWindowBarStackedAutoFilterCategories,
         chartWindowBarStackedAutoFilterSubcategories,
         chartWindowBarStackedAutoResize,
-      } from '../respvis.mjs';
+      } from '../moduleInJs/respvis.js';
 
       select('#chart')
         .append('div')
