--- a/src/examples/bar-basic.html
+++ b/src/examples/bar-basic.html
@@ -27,7 +27,7 @@
         chartWindowBarRender,
         chartWindowBarAutoFilterCategories,
         chartWindowBarAutoResize,
-      } from '../respvis.mjs';
+      } from '../moduleInJs/respvis.js';
 
       select('#chart')
         .append('div')
