--- a/src/examples/line-multi-basic.html
+++ b/src/examples/line-multi-basic.html
@@ -26,7 +26,7 @@
         chartWindowLineData,
         chartWindowLineRender,
         chartWindowLineAutoResize,
-      } from '../respvis.mjs';
+      } from '../moduleInJs/respvis.js';
 
       select('#chart')
         .append('div')
