--- a/src/examples/line.html
+++ b/src/examples/line.html
@@ -74,7 +74,7 @@
     <div id="chart"></div>
     <script src="./vendor/d3.v7.js"></script>
     <script type="module">
-      import { chartWindowLineData, chartWindowLineRender } from '../respvis.mjs';
+      import { chartWindowLineData, chartWindowLineRender } from '../moduleInJs/respvis.js';
 
       import { years, averageOpens } from './data/google.js';
 
