--- a/src/examples/point-basic.html
+++ b/src/examples/point-basic.html
@@ -26,7 +26,7 @@
         chartWindowPointData,
         chartWindowPointRender,
         chartWindowPointAutoResize,
-      } from '../respvis.mjs';
+      } from '../moduleInJs/respvis.js';
 
       select('#chart')
         .append('div')
