--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,3 @@
 <html>
-  <meta http-equiv="refresh" content="0; URL=/examples" />
+  <meta http-equiv="refresh" content="0; URL=./examples/index.html" />
 </html>
