--- a/src/examples/line.html
+++ b/src/examples/line.html
@@ -72,11 +72,12 @@
   <body>
     <h1>Line Chart</h1>
     <div id="chart"></div>
-    <script src="./vendor/d3.v7.js"></script>
     <script type="module">
       import { chartWindowLineData, chartWindowLineRender } from '../moduleInJs/respvis.js';
 
       import { years, averageOpens } from './data/google.js';
+      import * as d3 from './vendor/d3-7.6.0/d3.js'
+
 
       const data = {
         title: 'Average Open Prices of the Google Stock',
