--- a/src/examples/article.html
+++ b/src/examples/article.html
@@ -82,7 +82,6 @@
       scelerisque euismod. Ut sed sagittis justo. Aliquam eget dignissim risus, vitae ultrices
       felis.
     </p>
-    <script src="./vendor/d3.v7.js"></script>
     <script type="module">
       import {
         chartWindowBarStackedData,
@@ -91,6 +90,7 @@
         chartWindowBarStackedAutoFilterSubcategories,
       } from '../moduleInJs/respvis.js';
       import { years, desktop, phone, tablet, platforms } from './data/desktop-phone-tablet.js';
+      import * as d3 from './vendor/d3-7.6.0/d3.js'
 
       const shares = desktop.map((d, i) => [desktop[i], phone[i], tablet[i]]);
 
