--- a/src/examples/bar.html
+++ b/src/examples/bar.html
@@ -28,13 +28,14 @@
     <h1>Bar Chart</h1>
     <div id="chart"></div>
   </body>
-  <script src="./vendor/d3.v7.js"></script>
   <script type="module">
     import {
       chartWindowBarData,
       chartWindowBarAutoFilterCategories,
       chartWindowBarRender,
     } from '../moduleInJs/respvis.js';
+    import * as d3 from './vendor/d3-7.6.0/d3.js'
+
 
     import data from './data/austrian-cities.js';
 
