--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -20,13 +20,13 @@
 <!--      <li><a href="./point-basic.html">Basic Point Chart</a></li>-->
       <li><a href="./line-multi-basic.html">Basic Multi-Line Chart</a></li>
       <li><a href="./line.html">Line Chart</a></li>
-<!--      <li><a href="./point.html">Point Chart</a></li>-->
+      <li><a href="./point.html">Point Chart</a></li>
       <li><a href="./grouped-bar.html">Grouped Bar Chart</a></li>
       <li><a href="./stacked-bar-percent.html">Percent Stacked Bar Chart</a></li>
       <li><a href="./stacked-bar.html">Stacked Bar Chart</a></li>
       <li><a href="./line-multi.html">Multi-Line Chart</a></li>
       <li><a href="./article.html">News Article</a></li>
-      <li><a href="./legend.html">Legend</a></li>
+<!--      <li><a href="./legend.html">Legend</a></li>-->
     </ul>
   </body>
 </html>
