#3 Improve Multi Line Chart Responsiveness

--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -26,7 +26,7 @@
       <li><a href="./stacked-bar.html">Stacked Bar Chart</a></li>
       <li><a href="./line-multi.html">Multi-Line Chart</a></li>
       <li><a href="./article.html">News Article</a></li>
-<!--      <li><a href="./legend.html">Legend</a></li>-->
+      <li><a href="./legend.html">Legend</a></li>
     </ul>
   </body>
 </html>
