--- a/src/examples/line-multi.html
+++ b/src/examples/line-multi.html
@@ -16,13 +16,44 @@
             display: none;
         }
 
+        .legend-item {
+            margin-top: 1rem;
+        }
+
+        @media (max-width: 400px) {
+            .point, .axis {
+                display: none;
+            }
+
+            .point:first-of-type, .point:last-of-type {
+                display: block;
+            }
+        }
+
         @media (max-width: 700px) {
+            .chart {
+                grid-template: auto auto 1fr auto / auto 1fr auto;
+                grid-template-areas: 'header  header  header' 'legend legend legend' 'axis-left draw-area draw-area' ' . axis-bottom . ';
+            }
+
+            .legend {
+                width: 100%;
+            }
+            .legend .items {
+                flex-direction: row;
+                width: 100%;
+                justify-content: space-evenly;
+            }
+        }
+
+        @media (max-width: 700px) and (min-width: 400px) {
             .point, .axis-x .tick {
                 display: none;
             }
             .point:nth-of-type(5n), .axis-x .tick:nth-of-type(5n) {
                 display: block;
             }
+
         }
 
         @media (min-width: 700px) {
@@ -72,7 +103,6 @@
         categoryEntity: 'Cities',
         categories: data.cities,
         values: data.populations,
-        tooltips: (_, { category, value }) => `City: ${category}<br/>Population: ${value}`,
         xAxis: { title: 'City' },
         yAxis: { title: 'Population', configureAxis: (axis) => axis.tickFormat(d3.format('.2s')) },
         labels: {},
@@ -83,10 +113,13 @@
         yValues: [yAsia, yUSA, yEurope],
         xAxis: { title: 'Years' },
         yAxis: { title: 'Consumption' },
+        markerTooltips: {
+            tooltips: (_, { xValue, yValue }) => `Year: ${xValue}<br/>Pow. Consumption: ${yValue}kWh`
+        },
         legend: {
             title: 'Legend',
             keys: ['East Asia', 'USA', 'Europe'],
-            labels: ['East Asia', 'USA', 'Europe']
+            labels: ['East Asia', 'USA', 'Europe'],
         }
 
     }
@@ -97,15 +130,16 @@
         .call(chartWindowLineRender)
         .call(chartWindowLineAutoResize)
         .on('resize', () => {
-            const mediumWidth = window.matchMedia('(min-width: 40rem)').matches;
-            const largeWidth = window.matchMedia('(min-width: 60rem)').matches;
+            const mediumWidth = window.matchMedia('(min-width: 400px)').matches && window.matchMedia('(min-width: 400px)').matches;
+            const largeWidth = window.matchMedia('(min-width: 700px)').matches;
+            const minWidth = window.matchMedia('(max-width: 400px)').matches;
 
-            chartData.title = mediumWidth ? "Electric power consumption (kWh per capita)" : 'Power Consumption (kWh)';
+            chartData.title = largeWidth ? "Electric power consumption (kWh per capita)" : 'Power Consumption (kWh)';
+            chartData.title = mediumWidth ? chartData.title : 'Pow. Cons. (kWh)'
 
             const priceTickFormat = largeWidth ? format(',') : format('.2s');
             chartData.yAxis.configureAxis = (axis) => axis.tickFormat(priceTickFormat);
-            console.log(largeWidth)
-            const yearTickFormat = largeWidth ? (v) => v : (v) => `'${v.slice(-2)}`;
+            const yearTickFormat = window.matchMedia('(min-width: 900px)').matches ? (v) => v : (v) => `'${v.slice(-2)}`;
             chartData.xAxis.configureAxis = (axis) => axis.tickFormat(yearTickFormat);
 
             chart.datum(chartWindowLineData(chartData)).call(chartWindowLineRender);
