#2 Begin Article Example

--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -25,7 +25,7 @@
       <li><a href="./stacked-bar-percent.html">Percent Stacked Bar Chart</a></li>
       <li><a href="./stacked-bar.html">Stacked Bar Chart</a></li>
       <li><a href="./line-multi.html">Multi-Line Chart</a></li>
-      <li><a href="./article.html">News Article</a></li>
+      <li><a href="article/article.html">News Article</a></li>
 <!--      <li><a href="./legend.html">Legend</a></li>-->
     </ul>
   </body>
