--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -18,7 +18,7 @@
 <!--      <li><a href="./stacked-bar-basic.html">Basic Stacked Bar Chart</a></li>-->
 <!--      <li><a href="./line-basic.html">Basic Line Chart</a></li>-->
 <!--      <li><a href="./point-basic.html">Basic Point Chart</a></li>-->
-      <li><a href="./line-multi-basic.html">Basic Multi-Line Chart</a></li>
+<!--      <li><a href="./line-multi-basic.html">Basic Multi-Line Chart</a></li>-->
       <li><a href="./line.html">Line Chart</a></li>
       <li><a href="./point.html">Point Chart</a></li>
       <li><a href="./grouped-bar.html">Grouped Bar Chart</a></li>
