Remove Basic charts completely, Link Examples directly from index file

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,24 @@
-<html>
-  <meta http-equiv="refresh" content="0; URL=./examples/index.html" />
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<head>
+  <title>RespVis Examples</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      background-color: floralwhite;
+    }
+  </style>
+</head>
+<body>
+<h1>RespVis Examples</h1>
+<ul>
+  <li><a href="./examples/line.html">Line Chart</a></li>
+  <li><a href="./examples/point.html">Point Chart</a></li>
+  <li><a href="./examples/grouped-bar.html">Grouped Bar Chart</a></li>
+  <li><a href="./examples/stacked-bar-percent.html">Percent Stacked Bar Chart</a></li>
+  <li><a href="./examples/stacked-bar.html">Stacked Bar Chart</a></li>
+  <li><a href="./examples/line-multi.html">Multi-Line Chart</a></li>
+  <li><a href="./examples/article/article.html">News Article</a></li>
+</ul>
+</body>
 </html>
