Rearrange libs and examples in dist

--- a/src/examples/grouped-bar.html
+++ b/src/examples/grouped-bar.html
@@ -51,10 +51,10 @@
         chartWindowBarGroupedRender,
         chartWindowBarGroupedAutoFilterCategories,
         chartWindowBarGroupedAutoFilterSubcategories,
-      } from '../moduleInJs/respvis.js';
+      } from './libs/respvis/respvis.js';
 
       import { sites, revenues, years } from './data/company.js';
-      import * as d3 from './vendor/d3-7.6.0/d3.js'
+      import * as d3 from './libs/d3-7.6.0/d3.js'
 
       const data = {
         categoryEntity: 'Sites',
