--- a/src/examples/line.html
+++ b/src/examples/line.html
@@ -73,10 +73,10 @@
     <h1>Line Chart</h1>
     <div id="chart"></div>
     <script type="module">
-      import { chartWindowLineData, chartWindowLineRender } from '../moduleInJs/respvis.js';
+      import { chartWindowLineData, chartWindowLineRender } from './libs/respvis/respvis.js';
 
       import { years, averageOpens } from './data/google.js';
-      import * as d3 from './vendor/d3-7.6.0/d3.js'
+      import * as d3 from './libs/d3-7.6.0/d3.js'
 
 
       const data = {
