--- a/src/examples/point.html
+++ b/src/examples/point.html
@@ -35,9 +35,9 @@
     <h1>Point Chart</h1>
     <div id="chart"></div>
     <script type="module">
-      import { chartWindowPointData, chartWindowPointRender, rectFromString } from '../moduleInJs/respvis.js';
+      import { chartWindowPointData, chartWindowPointRender, rectFromString } from './libs/respvis/respvis.js';;
       import { areas, prices } from './data/houses.js';
-      import * as d3 from './vendor/d3-7.6.0/d3.js'
+      import * as d3 from './libs/d3-7.6.0/d3.js'
 
 
       const areaScale = d3
