--- a/src/examples/stacked-bar-percent.html
+++ b/src/examples/stacked-bar-percent.html
@@ -21,14 +21,14 @@
     <h1>Percent Stacked Bar Chart</h1>
     <div id="chart"></div>
     <script type="module">
-      import { select } from './vendor/d3-7.6.0/d3.js';
+      import { select } from './libs/d3-7.6.0/d3.js';
       import {
         chartWindowBarStackedData,
         chartWindowBarStackedRender,
         chartWindowBarStackedAutoFilterCategories,
         chartWindowBarStackedAutoFilterSubcategories,
         chartWindowBarStackedAutoResize,
-      } from '../moduleInJs/respvis.js';
+      } from './libs/respvis/respvis.js';;
 
       select('#chart')
         .append('div')
