--- a/src/examples/stacked-bar.html
+++ b/src/examples/stacked-bar.html
@@ -60,7 +60,7 @@
         subcategoryEntity: 'Platforms',
         subcategories: platforms,
         labels: {},
-        legend: {},
+        legend: {reverse: true},
         tooltips: (e, { category, subcategory, value }) =>
           `Year: ${category}<br/>Platform: ${subcategory}<br/>Market Share: ${d3.format('.2f')(
             value
