--- a/src/examples/line.html
+++ b/src/examples/line.html
@@ -80,12 +80,12 @@
 
 
       const data = {
-        title: 'Average Open Prices of the Google Stock',
+        title: 'Average Opening Price of Google Stock',
         subtitle: '2004 to 2022',
         xValues: years,
         yValues: [averageOpens],
-        xAxis: { title: 'Years' },
-        yAxis: { title: 'Average Open Prices', subtitle: '[USD]' },
+        xAxis: { title: 'Year' },
+        yAxis: { title: 'Average Opening Price', subtitle: '[USD]' },
         markerTooltips: {
           tooltips: (_, { xValue, yValue }) =>
             `Year: ${xValue}<br/>Average Open Price: $${d3.format('.2f')(yValue)}`,
@@ -102,7 +102,7 @@
           const mediumWidth = window.matchMedia('(min-width: 40rem)').matches;
           const largeWidth = window.matchMedia('(min-width: 60rem)').matches;
 
-          data.title = mediumWidth ? 'Average Open Prices of the Google Stock' : 'Google Stock Prices';
+          data.title = mediumWidth ? 'Average Open Prices of Google Stock' : 'Google Stock Prices';
 
           const priceTickFormat = largeWidth ? d3.format(',') : d3.format('.2s');
           data.yAxis.configureAxis = (axis) => axis.tickFormat(priceTickFormat);
