#2 Replace Flexbox with Grid, Replace ems and px with rem in media queries, Continue Adapting Article

--- a/src/examples/article/article.html
+++ b/src/examples/article/article.html
@@ -12,85 +12,121 @@
   <body>
     <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h1>
     <div class="grid-article">
-      <div class="col-1">
-        <div class="article article-1">
-          <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h2>
-          <div id="market-shares-chart" class="chart-container"></div>
-          <p>
-            Vivamus iaculis augue elit, sit amet consectetur dui condimentum a. Vivamus arcu diam, commodo
-            id dictum et, fermentum eget tellus. Etiam mattis purus vitae volutpat luctus. Cras et nisi
-            risus. Suspendisse potenti. Donec ut rutrum magna. Aenean a ligula in erat sodales posuere at
-            sed quam. Etiam feugiat faucibus est id laoreet. Aliquam egestas euismod lectus, in finibus
-            sem pulvinar fringilla. Vestibulum justo lacus, gravida sed dolor sit amet, lacinia varius
-            augue. Aenean sollicitudin eleifend enim, sagittis viverra eros fringilla eget.
-          </p>
-        </div>
-        <div class="article article-4">
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
-          <p>
-            Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
-            sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
-            ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
-            libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
-            Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
-            mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
-            felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
-          </p>
-        </div>
+      <div class="article" id="article-1">
+      <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h2>
+      <div id="market-shares-chart" class="chart-container"></div>
+      <p>
+        Vivamus iaculis augue elit, sit amet consectetur dui condimentum a. Vivamus arcu diam, commodo
+        id dictum et, fermentum eget tellus. Etiam mattis purus vitae volutpat luctus. Cras et nisi
+        risus. Suspendisse potenti. Donec ut rutrum magna. Aenean a ligula in erat sodales posuere at
+        sed quam. Etiam feugiat faucibus est id laoreet. Aliquam egestas euismod lectus, in finibus
+        sem pulvinar fringilla. Vestibulum justo lacus, gravida sed dolor sit amet, lacinia varius
+        augue. Aenean sollicitudin eleifend enim, sagittis viverra eros fringilla eget.
+      </p>
+    </div>
+      <div class="article" id="article-2">
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
+        <p>
+          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
+          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
+          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
+          libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
+          Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
+          mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
+          felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
+        </p>
+        <p>
+          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
+          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
+          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
+          libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
+          Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
+          mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
+          felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
+        </p>
+        <p>
+          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
+          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
+          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum.
+        </p>
       </div>
-      <div class="col-2">
-        <div class="article article-2">
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
-          <p>
-            Vivamus iaculis augue elit, sit amet consectetur dui condimentum a. Vivamus arcu diam, commodo
-            id dictum et, fermentum eget tellus. Etiam mattis purus vitae volutpat luctus. Cras et nisi
-            risus. Suspendisse potenti. Donec ut rutrum magna. Aenean a ligula in erat sodales posuere at
-            sed quam. Etiam feugiat faucibus est id laoreet. Aliquam egestas euismod lectus, in finibus
-            sem pulvinar fringilla. Vestibulum justo lacus, gravida sed dolor sit amet, lacinia varius
-            augue. Aenean sollicitudin eleifend enim, sagittis viverra eros fringilla eget.
-          </p>
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
-          <div id="electric-power-consumption" class="chart-container"></div>
-        </div>
-        <div class="article article-5">
-          <p>
-            Nunc eu eros tincidunt, aliquam ipsum non, auctor ipsum. Fusce et sem fermentum nisl pulvinar
-            vulputate id a dui. Curabitur id aliquet magna. Donec laoreet ante at dapibus sagittis.
-            Maecenas id varius risus. Curabitur eros leo, pretium in ipsum eu, mollis interdum justo.
-            Curabitur sodales, erat quis ultricies consectetur, tortor velit condimentum mi, et pulvinar
-            tellus arcu sit amet magna. Integer iaculis diam vel lacus sodales consequat. Pellentesque
-            habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec semper
-            molestie massa, ut vehicula justo porttitor nec. Vestibulum vulputate purus turpis, eu cursus
-            ipsum consectetur sit amet. Mauris hendrerit venenatis porttitor. Fusce vel arcu nec ligula
-            scelerisque euismod. Ut sed sagittis justo. Aliquam eget dignissim risus, vitae ultrices
-            felis.
-          </p>
-        </div>
+      <div class="article" id="article-3">
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
+        <p>
+          Vivamus iaculis augue elit, sit amet consectetur dui condimentum a. Vivamus arcu diam, commodo
+          id dictum et, fermentum eget tellus. Etiam mattis purus vitae volutpat luctus. Cras et nisi
+          risus. Suspendisse potenti. Donec ut rutrum magna. Aenean a ligula in erat sodales posuere at
+          sed quam. Etiam feugiat faucibus est id laoreet. Aliquam egestas euismod lectus, in finibus
+          sem pulvinar fringilla. Vestibulum justo lacus, gravida sed dolor sit amet, lacinia varius
+          augue. Aenean sollicitudin eleifend enim, sagittis viverra eros fringilla eget.
+        </p>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
+        <div id="electric-power-consumption" class="chart-container"></div>
       </div>
-      <div class="col-3">
-        <div class="article article-3">
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
-          <div id="electric-power-consumption2" class="chart-container"></div>
-          <p>
-            Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
-            sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
-            ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
-            libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
-            Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
-            mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
-            felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
-          </p>
-        </div>
-        <div class="article article-6">
-          <p>
-            Etiam at turpis metus. Aliquam ut tellus at erat ultrices dapibus. Curabitur vestibulum
-            dignissim efficitur. Etiam sed mi quis orci interdum gravida. Curabitur eget massa quam. Morbi
-            leo leo, consectetur a nibh a, consectetur rhoncus ipsum. Pellentesque ultrices eros vel neque
-            lobortis, et cursus enim bibendum. Curabitur non elit quam. Aliquam vitae urna ut urna aliquet
-            lobortis sed in eros. Mauris sed euismod velit, quis tempus orci. Integer vehicula bibendum
-            libero non lobortis.
-          </p>
-        </div>
+      <div class="article" id="article-4">
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
+        <p>
+          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
+          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
+          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
+          libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
+          Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
+          mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
+          felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
+        </p>
+        <p>
+          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
+          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
+          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
+          libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
+          Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
+          mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
+          felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
+        </p>
+        <p>
+          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
+          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
+          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum.
+        </p>
+      </div>
+      <div class="article" id="article-5">
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
+        <div id="electric-power-consumption2" class="chart-container"></div>
+        <p>
+          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
+          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
+          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
+          libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
+          Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
+          mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
+          felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
+        </p>
+      </div>
+      <div class="article" id="article-6">
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
+        <p>
+          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
+          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
+          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
+          libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
+          Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
+          mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
+          felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
+        </p>
+        <p>
+          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
+          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
+          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
+          libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
+          Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
+          mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
+          felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
+        </p>
+        <p>
+          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
+          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
+          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum.
+        </p>
       </div>
     </div>
 
