--- a/src/examples/line-multi.html
+++ b/src/examples/line-multi.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../respvis.css" />
     <style>
+        .toolbar {
+            display: none;
+        }
         #chart {
             width: 100%;
             height: 75vh;
