Add Scatter Plot with Cars sold in Germany

--- a/src/examples/article/article.html
+++ b/src/examples/article/article.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../../respvis.css" />
     <link rel="stylesheet" href="./styles.css" />
-    <link rel="stylesheet" href="./electric-power-consumption.css" />
-    <link rel="stylesheet" href="./market-shares.css" />
+    <link rel="stylesheet" href="electric-power-comsumption/electric-power-consumption.css" />
+    <link rel="stylesheet" href="market-shares/market-shares.css" />
   </head>
   <body>
     <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h1>
@@ -91,7 +91,7 @@
       </div>
       <div class="article" id="article-5">
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
-        <div id="electric-power-consumption2" class="chart-container"></div>
+        <div id="sold-cars-germany" class="chart-container"></div>
         <p>
           Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
           sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
@@ -130,8 +130,8 @@
       </div>
     </div>
 
-    <script type="module" src="market-shares-chart.js"></script>
-    <script type="module" src="electric-power-consumption.js"></script>
-    <script type="module" src="electric-power-consumption2.js"></script>
+    <script type="module" src="market-shares/market-shares-chart.js"></script>
+    <script type="module" src="electric-power-comsumption/electric-power-consumption.js"></script>
+    <script type="module" src="sold-cars-germany/sold-cars-germany-chart.js"></script>
   </body>
 </html>
