Add Styling to Scatter Plot

--- a/src/examples/article/article.html
+++ b/src/examples/article/article.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="electric-power-comsumption/electric-power-consumption.css" />
     <link rel="stylesheet" href="market-shares/market-shares.css" />
+    <link rel="stylesheet" href="sold-cars-germany/sold-cars-germany.css" />
   </head>
   <body>
     <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h1>
